umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_cis-decalin.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms [
        "H#v"
        "C#v4#T0"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#v4#T1"
        "H#v"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"]
      :bonds [
        [0 1 :single]
        [1 6 :single]
        [1 11 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [6 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]]
      :stereo-atoms [
        {:ligands [0 2 6 11] :site 1 :type :ccw}
        {:ligands [1 5 7 8] :site 6 :type :cw}]}
    :success true}
  :counts {
    :output {
      :atoms [
        "H#v"
        "C#v4#T0"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#v4#T1"
        "H#v"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"]
      :bonds [
        [0 1 :single]
        [1 6 :single]
        [1 11 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [6 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]]
      :stereo-atoms [
        {:ligands [0 2 6 11] :site 1 :type :ccw}
        {:ligands [1 5 7 8] :site 6 :type :cw}]}
    :success true}}
