umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_l-ascorbic-acid.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms [
        "O#h#n2#v"
        "C#h2#v2"
        "C#h#v3"
        "O#h#n2#v"
        "C#h#v3"
        "O#n2#v2"
        "C#v4"
        "O#n2#v2"
        "C#v4"
        "O#h#n2#v"
        "C#v4"
        "O#h#n2#v"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [2 4 :single]
        [4 10 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :double]
        [6 8 :single]
        [8 9 :single]
        [8 10 :double]
        [10 11 :single]]}
    :success true}
  :counts {
    :output {
      :atoms [
        "O#h#n2#v"
        "C#h2#v2"
        "C#h#v3#T0"
        "O#h#n2#v"
        "C#h#v3#T1"
        "O#n2#v2"
        "C#v4"
        "O#n2#v2"
        "C#v4"
        "O#h#n2#v"
        "C#v4"
        "O#h#n2#v"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [2 4 :single]
        [4 10 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :double]
        [6 8 :single]
        [8 9 :single]
        [8 10 :double]
        [10 11 :single]]
      :stereo-atoms [
        {:ligands [1 3 4 [:h 2]] :site 2 :type :ccw}
        {:ligands [2 5 10 [:h 4]] :site 4 :type :cw}]}
    :success true}}
