umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_methyl-ethyl-propyl-isopropyl-phosphonium.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms [
        "C#h3#v"
        "C#h2#v2"
        "P#c+#v4#T1"
        "C#h3#v"
        "C#h2#v2"
        "C#h2#v2"
        "C#h3#v"
        "C#h#v3"
        "C#h3#v"
        "C#h3#v"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [2 4 :single]
        [4 5 :single]
        [5 6 :single]
        [2 7 :single]
        [7 8 :single]
        [7 9 :single]]
      :stereo-atoms [{:attrs :cw :ligands [1 3 4 7] :site 2}]}
    :success true}
  :counts {
    :output {
      :atoms [
        "C#h3#v"
        "C#h2#v2"
        "P#c+#v4#T1"
        "C#h3#v"
        "C#h2#v2"
        "C#h2#v2"
        "C#h3#v"
        "C#h#v3"
        "C#h3#v"
        "C#h3#v"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [2 4 :single]
        [4 5 :single]
        [5 6 :single]
        [2 7 :single]
        [7 8 :single]
        [7 9 :single]]
      :stereo-atoms [{:attrs :cw :ligands [1 3 4 7] :site 2}]}
    :success true}}
