umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_methyl-ethyl-sulfoxide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "S#c+#n#v3#T1" "O#c-#n3#v" "C#h2#v2" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [3 4 :single]]
      :stereo-atoms [{:ligands [0 2 3 [:lp 1]] :site 1 :type :cw}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "S#c+#n#v3#T1" "O#c-#n3#v" "C#h2#v2" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [3 4 :single]]
      :stereo-atoms [{:ligands [0 2 3 [:lp 1]] :site 1 :type :cw}]}
    :success true}}
