umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_r-1-phenylethanol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :aromatic-systems [{:atoms [3 4 5 6 7 8] :type "[1,1,1,1,1,1]"}]
      :atoms [
        "C#h3#v"
        "C#h#v3#T1"
        "O#h#n2#v"
        "C#v3#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [1 3 :single]
        [3 8 :aromatic]
        [3 4 :aromatic]
        [4 5 :aromatic]
        [5 6 :aromatic]
        [6 7 :aromatic]
        [7 8 :aromatic]]
      :stereo-atoms [{:ligands [0 2 3 [:h 1]] :site 1 :type :cw}]}
    :success true}
  :counts {
    :output {
      :aromatic-systems [{:atoms [3 4 5 6 7 8] :type "[1,1,1,1,1,1]"}]
      :atoms [
        "C#h3#v"
        "C#h#v3#T1"
        "O#h#n2#v"
        "C#v3#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [1 3 :single]
        [3 8 :aromatic]
        [3 4 :aromatic]
        [4 5 :aromatic]
        [5 6 :aromatic]
        [6 7 :aromatic]
        [7 8 :aromatic]]
      :stereo-atoms [{:ligands [0 2 3 [:h 1]] :site 1 :type :cw}]}
    :success true}}
