umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_r-butan-2-ol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h#v3#T1" "C#h3#v" "O#h#n2#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [2 4 :single]]
      :stereo-atoms [{:ligands [1 3 4 [:h 2]] :site 2 :type :cw}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h#v3#T1" "C#h3#v" "O#h#n2#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [2 4 :single]]
      :stereo-atoms [{:ligands [1 3 4 [:h 2]] :site 2 :type :cw}]}
    :success true}}
