umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_r-methyloxirane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h#v3#T0" "C#h2#v2" "O#n2#v2"]
      :bonds [[0 1 :single] [1 3 :single] [1 2 :single] [2 3 :single]]
      :stereo-atoms [{:ligands [0 2 3 [:h 1]] :site 1 :type :ccw}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h#v3#T0" "C#h2#v2" "O#n2#v2"]
      :bonds [[0 1 :single] [1 3 :single] [1 2 :single] [2 3 :single]]
      :stereo-atoms [{:ligands [0 2 3 [:h 1]] :site 1 :type :ccw}]}
    :success true}}
