umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_s-cfclbri.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:error "resolution underdetermined" :success false}
  :counts {
    :output {
      :atoms ["C#v4#T0" "F#n3#v" "Cl#n3#v" "Br#n3#v" "I#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single]]
      :stereo-atoms [{:ligands [1 2 3 4] :site 0 :type :ccw}]}
    :success true}}
